feat: 동행모집 관련 백엔드 개선사항
- TogetherController 검색 결과에 관심 상태 포함하도록 개선
- 인증된 사용자의 관심 여부를 배치로 조회하여 성능 최적화
- TogetherService에서 isActive 상태를 active 필드로 정확히 전달
- TogetherDto Response에 active 필드로 모집 상태 명확히 제공
- 프론트엔드와의 데이터 계약 일치성 확보